<resources>
    <string name="app_name">SignHandTranslator</string>
    <string name="login_text">Sign In</string>
    <string name="email_text">Email Address</string>
    <string name="password_text">Password</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="registerquest_text">Don\'t have an account? <b>Sign Up</b></string>
    <string name="register_text">Sign Up</string>
    <string name="full_name_text">Full Name</string>
    <string name="already_member_text">Have an account? <b>Sign In</b></string>
    <string name="sign_hand_translator_text">Sign Hand Translator</string>
    <string name="get_started_text">Get Started</string>
    <string name="desc_homepage">Let\'s start translating!</string>
    <string name="desc_homepage2">
        You can translate through your camera
        \nor scan image from gallery
    </string>
    <string name="camera_text">CAMERA</string>
    <string name="a_alphabet">A</string>
    <string name="username">Username</string>
    <string name="city_example">City</string>
    <string name="sign">|</string>
    <string name="edit_txt"><u>Edit</u></string>
    <string name="about_me_text">About Me</string>
    <string name="bookmarks_text">Bookmarks</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="gender_text">Gender</string>
    <string name="name_text">Name</string>
    <string name="home_text">Home</string>
    <string name="dictionary_text">Dictionary</string>
    <string name="profile_text">Profile</string>
    <string name="update_text">Update</string>
    <string name="hint_name">Enter your full name</string>

    <style name="login_text">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:fontFamily">@font/nunito</item>
        <item name="android:textColor">@color/font_color</item>
        <item name="android:textSize">@dimen/fourteen_sp</item>
    </style>

    <style name="text_style2">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:maxLines">1</item>
        <item name="fontFamily">@font/nunito</item>
        <item name="android:textSize">@dimen/twelve_sp</item>
    </style>

    <style name="text_style3">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:maxLines">1</item>
        <item name="fontFamily">@font/nunito_bold</item>
        <item name="android:textSize">@dimen/fourteen_sp</item>
    </style>

    <style name="text_style4">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:maxLines">1</item>
        <item name="fontFamily">@font/nunito</item>
        <item name="android:textColor">@color/white</item>
        <item name="android:textSize">@dimen/fourteen_sp</item>
    </style>

    <style name="text_style5">
        <item name="android:layout_width">0dp</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">@color/white</item>
        <item name="android:maxLines">1</item>
        <item name="fontFamily">@font/nunito</item>
        <item name="android:textSize">@dimen/sixteen_sp</item>
        <item name="android:textColorHint">@color/purple_200</item>
        <item name="backgroundTint">@color/purple_500</item>
    </style>

    <style name="text_style6">
        <item name="android:layout_width">0dp</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">@color/white</item>
        <item name="fontFamily">@font/nunito</item>
        <item name="android:textSize">@dimen/sixteen_sp</item>
        <item name="android:textColorHint">@color/purple_200</item>
        <item name="backgroundTint">@color/purple_500</item>
    </style>

    <style name="ed_style1">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:background">@drawable/box_edtext</item>
        <item name="android:textColor">@color/white</item>
        <item name="android:textColorHint">@color/color_hint</item>
    </style>

    <style name="btn_style0">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="fontFamily">@font/nunito_bold</item>
        <item name="textAllCaps">false</item>
        <item name="android:textSize">@dimen/sixteen_sp</item>
    </style>

    <string name="reset_password_text">Reset Password</string>
    <string name="hi_user_txt">Hi, User !</string>
    <string name="username_hint">Enter your username</string>
    <string name="city_hint">Enter your city</string>
    <string name="about_hint">Write something about yourself</string>
    <string name="please_sign_in_to_your_account_txt">Please sign in to your account</string>
    <string name="sign_in_with_google_txt">Sign In With Google</string>
    <string name="create_new_account_txt">Create new account</string>
    <string name="fill_form_txt">Please fill in the form to continue</string>
    <string name="full_name_txt">Full Name</string>
    <string name="phone_number_hint">Enter your phone number</string>
    <string name="change_profile_picture_txt"><u>Change Profile Picture</u></string>
    <string name="close_text">Close</string>

    <string-array name="gender_array">
        <item>Choose One</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_txt">logout</string>
    <string name="txt_repeat_password">Repeat Password</string>
    <string name="title_activity_camera">CameraActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="translation_text">Start Translating</string>
    <string name="bookmark_text">Bookmark</string>

</resources>